--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "node-redis": "^0.1.7",
     "notenv": "^2.0.3",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "random-string-alphanumeric-generator": "^0.12.2",
+    "redis": "^4.3.1"
   }
 }
