--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "finalhandler": "^1.2.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "node-redis": "^0.1.7",
     "notenv": "^2.0.3",
@@ -37,6 +38,7 @@
     "redis": "^4.3.1",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.4",
+    "socket.io-redis": "^6.1.1",
     "twilio": "^3.82.2"
   },
   "devDependencies": {
