--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/Auxio-Team/auxio-server#readme",
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.264.0",
     "@socket.io/redis-adapter": "^7.2.0",
+    "aws-sdk": "^2.1309.0",
     "bcrypt": "^5.0.1",
     "cjs": "^0.0.11",
     "cors": "^2.8.5",
@@ -41,7 +43,8 @@
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.4",
     "socket.io-redis": "^6.1.1",
-    "twilio": "^3.82.2"
+    "twilio": "^3.82.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
