--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm-run-all --parallel start-redis start-server start-auth-server start-socket-server",
+    "dev": "npm-run-all --parallel start-redis start-server start-socket-server",
     "start-server": "node server.js",
-    "start-auth-server": "node authServer.js",
     "start-socket-server": "node socketServer.js",
-    "start-redis": "redis-server src/configs/redis-36379.conf"
+    "start-redis": "redis-server src/configs/redis-36379.conf",
+    "debug": "nodemon --inspect=0.0.0.0:3229 server.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "node-redis": "^0.1.7",
+    "nodemon": "^2.0.20",
     "notenv": "^2.0.3",
     "pg": "^8.8.0",
     "random-string-alphanumeric-generator": "^0.12.2",
